# adverstorial

./: .example.env  .gitignore  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  adversaries.txt  adverstorial.py  adverstorial.sh  cast_str.py  demo.py  examples.py  pyproject.toml  seed-prompt.sh  setup.py
adverstorial/: __init__.py  cli.py  dialogue.py  llm_client.py
python-cli/: .example.env  adverstorial-cron.sh  adverstorial.py
tests/: test_adverstorial.py
wordlists/: starter.txt
