[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_backend"

[project]
name = "adverstorial"
version = "0.1.0"
description = "AI Story Writer using adversarial dialogue"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.21.0",
]

[project.scripts]
adverstorial = "adverstorial.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
